# tesis

./: .gitignore  CLAUDE.md  LICENSE
emg_acquisition/: .gitignore  README.md  config.py  delsys_client.py  main.py  probe.sh  probe_api.py  recorder.py  requirements.txt  ros_bridge.py  run.sh  setup_venv.sh  windowing.py
exo_right_arm_ws/: README.md  frames_2026-03-13_16.28.03.gv  frames_2026-03-13_16.34.14.gv
exo_right_arm_ws/install/: local_setup.sh  setup.sh
exo_right_arm_ws/log/: latest_build
exo_right_arm_ws/motor_id_runs/20260409_151115/: processed_data.csv  raw_data.csv
exo_right_arm_ws/motor_id_runs/20260409_152907/: processed_data.csv  raw_data.csv
exo_right_arm_ws/motor_id_runs/20260409_154936/: processed_data.csv  raw_data.csv
exo_right_arm_ws/motor_id_runs/20260409_155124/: processed_data.csv  raw_data.csv
exo_right_arm_ws/motor_id_runs/20260409_155728/: processed_data.csv  raw_data.csv
exo_right_arm_ws/motor_id_runs/20260409_162214/: processed_data.csv  raw_data.csv
exo_right_arm_ws/motor_id_runs/20260409_162606/: processed_data.csv  raw_data.csv
exo_right_arm_ws/motor_id_runs/20260409_163126/: processed_data.csv  raw_data.csv
exo_right_arm_ws/motor_id_runs/20260409_180709/: processed_data.csv  raw_data.csv
exo_right_arm_ws/motor_id_runs/20260409_181950/: processed_data.csv  raw_data.csv
exo_right_arm_ws/motor_id_runs/20260409_182513/: processed_data.csv  raw_data.csv
exo_right_arm_ws/motor_id_runs/20260409_183559/: processed_data.csv  raw_data.csv
exo_right_arm_ws/motor_id_runs/20260409_184108/: processed_data.csv  raw_data.csv
exo_right_arm_ws/motor_id_runs/20260409_185021/: processed_data.csv  raw_data.csv
exo_right_arm_ws/motor_id_runs/20260409_185249/: processed_data.csv  raw_data.csv
exo_right_arm_ws/motor_id_runs/20260409_185528/: processed_data.csv  raw_data.csv
exo_right_arm_ws/motor_id_runs/20260409_185736/: processed_data.csv  raw_data.csv
exo_right_arm_ws/motor_id_runs/20260409_192637/: processed_data.csv  raw_data.csv
exo_right_arm_ws/motor_id_runs/20260409_225238/: processed_data.csv  raw_data.csv
exo_right_arm_ws/motor_id_runs/20260409_225630/: processed_data.csv  raw_data.csv
exo_right_arm_ws/motor_id_runs/20260409_225855/: processed_data.csv  raw_data.csv
exo_right_arm_ws/src/admittance_controller/: CMakeLists.txt  admittance_controller_plugin.xml  package.xml
exo_right_arm_ws/src/admittance_controller/include/admittance_controller/: admittance_controller.hpp
exo_right_arm_ws/src/admittance_controller/src/: admittance_controller.cpp
exo_right_arm_ws/src/exo_description/: CMakeLists.txt
exo_right_arm_ws/src/exo_description/cmake/: rewrite_xacro_paths.cmake
exo_right_arm_ws/src/exo_description/config/: controllers.yaml
exo_right_arm_ws/src/exo_description/launch/: controller.launch  controller.yaml  display.launch
exo_right_arm_ws/src/exo_description/meshes/exo_assembly/left/: Left_Component_1_1.stl  Left_Component_2_1.stl  Left_Component_3_1.stl  Left_Component_4_1.stl  Left_Motor_1_1.stl  Left_Motor_2_1.stl  Left_Motor_3_1.stl  base_link.stl
exo_right_arm_ws/src/exo_description/meshes/exo_assembly/right/: Right_Component_1_1.stl  Right_Component_2_1.stl  Right_Component_3_1.stl  Right_Component_4_1.stl  Right_Motor_1_1.stl  Right_Motor_2_1.stl  Right_Motor_3_1.stl  base_link.stl
exo_right_arm_ws/src/exo_description/rviz/: exo.rviz
exo_right_arm_ws/src/exo_description/urdf/: exo.gazebo  exo.trans  exo.xacro  exo_arm_left.urdf  exo_arm_left.xacro  exo_arm_right.urdf  exo_arm_right.xacro  materials.xacro
exo_right_arm_ws/src/exo_hardware/: CMakeLists.txt
exo_right_arm_ws/src/exo_hardware/include/exo_hardware/: exo_hardware.hpp
exo_right_arm_ws/src/exo_hardware/src/: exo_hardware.cpp
exo_right_arm_ws/src/exo_utils/: CMakeLists.txt  package.xml
exo_right_arm_ws/src/exo_utils/exo_utils/: data_logger_node.py  dc_motor_id.py  dc_motor_stiction_id.py  metrics.py  plot_run.py  teensy_imu_node.py  teensy_serial_rtt.py  trajectory_player.py  trajectory_recorder.py
exo_right_arm_ws/src/exo_utils/include/exo_utils/dynamics/: dynamics_backend.hpp  regressor.hpp
exo_right_arm_ws/src/exo_utils/include/exo_utils/kinematics/: kinematics_utils.hpp
exo_right_arm_ws/src/exo_utils/scripts/: exo_data_logger  exo_dc_motor_id  exo_dc_motor_stiction_id  exo_imu_node  exo_metrics  exo_plot_run  exo_teensy_serial_rtt  exo_trajectory_player  exo_trajectory_recorder
exo_right_arm_ws/src/exo_utils/src/dynamics/: dynamics_backend.cpp  regressor.cpp
exo_right_arm_ws/src/exo_utils/src/kinematics/: kinematics_utils.cpp
exo_right_arm_ws/src/exo_utils/src/nodes/: fk_marker_node.cpp  regressor_check.cpp
exo_right_arm_ws/src/fl_controller/: CMakeLists.txt  fl_controller_plugin.xml  package.xml
exo_right_arm_ws/src/fl_controller/include/fl_controller/: fl_controller.hpp
exo_right_arm_ws/src/fl_controller/src/: fl_controller.cpp
exo_right_arm_ws/src/gravity_compensation_controller/: CMakeLists.txt  gravity_compensation_controller_plugin.xml  package.xml
exo_right_arm_ws/src/gravity_compensation_controller/include/gravity_compensation_controller/: controller_kinematics_utils.hpp  controller_utils.hpp  dynamics_backend.hpp  gravity_compensation_common.hpp  gravity_compensation_controller.hpp  joint_space_gravity_compensation_controller.hpp  task_space_gravity_compensation_controller.hpp
exo_right_arm_ws/src/gravity_compensation_controller/src/: controller_kinematics_utils.cpp  dynamics_backend.cpp  gravity_compensation_controller.cpp  joint_space_gravity_compensation_controller.cpp  task_space_gravity_compensation_controller.cpp
exo_right_arm_ws/src/smc_controller/: CMakeLists.txt  package.xml  smc_controller_plugin.xml
exo_right_arm_ws/src/smc_controller/include/smc_controller/: smc_controller.hpp
exo_right_arm_ws/src/smc_controller/src/: smc_controller.cpp
teensy/can_id_reassign/: can_id_reassign.ino
teensy/motorControl/: motorControl.ino  motorControlHelpers.ino
teensy/teensyROSnode/: teensyROSnode.ino
teensy/teensy_hardware/: teensy_hardware.ino
(+276 files in other folders)
