<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fl_controller</name>
  <version>0.0.0</version>
  <description>Feedback linearization controller with PD outer loop and full model-based feedforward</description>
  <maintainer email="farid.abuid@utec.edu.pe">farid</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>controller_interface</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>exo_control_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>realtime_tools</depend>
  <depend>ament_index_cpp</depend>
  <build_depend>eigen3_cmake_module</build_depend>
  <depend>exo_utils</depend>
  <exec_depend>exo_description</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <controller_interface plugin="fl_controller_plugin.xml"/>
  </export>
</package>
